Fixed empty command output bug and maybe fixed smile unicode not showing on android chrome

--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: Krypton;
+  font-family: Krypton, arial, sans-serif;
   src: url("/Krypton.ttf");
 }
 
